[metadata]
name = voldiscount

url = https://github.com/GBERESEARCH/voldiscount

author = GBERESEARCH
author_email = gberesearch@gmail.com
version = attr: voldiscount.__version__

description = Extract discount rates from option data using Put-Call parity.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir=
    =src
packages=find:

install_requires = 
    numpy>=2.2.3
    pandas>=2.2.3
    scipy>=1.15.2
    yfinance>=0.2.54
    fastapi>=0.115.11
    uvicorn>=0.34.0
    python-multipart>=0.0.20
    pydantic>=2.10.6
    requests>=2.32.3

[options.packages.find]
where=src